# fastapi_crud_engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  repository.py  requirements.txt  router.py
.github/workflows/: ci.yml  publish.yml
core/: __init__.py  audit.py  exceptions.py  filters.py  handlers.py  mixins.py  pagination.py
fastapi_crud_engine/: __init__.py  repository.py  router.py
fastapi_crud_engine/core/: audit.py  exceptions.py  filters.py  handlers.py  mixins.py  pagination.py  permissions.py
fastapi_crud_engine/features/: cache.py  export_import.py  rate_limiter.py  webhooks.py
features/: __init__.py  cache.py  export_import.py  rate_limiter.py  webhooks.py
tests/: conftest.py  test_audit.py  test_cache.py  test_exceptions.py  test_export_import.py  test_filters.py  test_handlers.py  test_mixins.py  test_pagination.py  test_permissions.py  test_rate_limiter.py  test_repository.py  test_router.py  test_webhooks.py
